# suzy

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  check-macro-fmt.bash  rustfmt.toml
.github/workflows/: rust.yml
build-default-font/: Cargo.toml
build-default-font/src/: main.rs
include/: sdl.h  sdl_full.h  tui.h
src/: adapter.rs  animation.rs  app.rs  dims.rs  graphics.rs  interaction.rs  lib.rs  main.rs  math.rs  pointer.rs  progressbar.rs  render_glyph.rs  sdf.rs  selectable.rs  units.rs  watch.rs  widget.rs  window.rs
src/app/: builder.rs  mod.rs  tester.rs  values.rs
src/fontasset/: mod.rs  output.rs  render_char.rs  settings.rs
src/graphics/: canvas.rs  mod.rs
src/graphics/drawparams/: mod.rs  opengl.rs
src/graphics/image/: mod.rs  opengl.rs  tui.rs
src/math/: color.rs  consts.rs  easing.rs  lerp.rs  mod.rs
src/platform/: mod.rs  sdl.rs  shared.rs  tui.rs
src/platform/dummy/: mod.rs  window.rs
src/platform/opengl/: buffer.rs  context.rs  drawparams.rs  layout.rs  matrix.rs  mod.rs  primitive.rs  shader.rs  standard_fragment.glsl  standard_vertex.glsl  text.rs  window.rs
src/platform/opengl/context/: mod.rs  opengl_bindings.rs
src/platform/opengl/graphics/: graphic.rs  image.rs  layout.rs  masker.rs  mod.rs  primitive.rs
src/platform/opengl/sdf/: drawparams.rs  mod.rs
src/platform/opengl/shader/: mod.rs  standard_fragment.glsl  standard_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/platform/opengl/stdshaders/: mod.rs  sdf.frag.glsl
src/platform/opengl/text/: calc.rs  font.rs  mod.rs
src/platform/opengl/texture/: mod.rs  populate.rs
src/platform/sdl2/: mod.rs  texture_loader.rs  window.rs
src/platform/tui/: ffi.rs  mod.rs  window.rs
src/widget/: anon.rs  children.rs  content.rs  data.rs  graphic.rs  init.rs  internal.rs  mod.rs  newwidget.rs  receivers.rs  rect.rs
src/widgets/: button.rs  mod.rs  togglebutton.rs
src/window/: dummy.rs  mod.rs  sdl.rs  tui.rs
src/window/tui/: mod.rs
suzy/: Cargo.toml  README.md
suzy-default-font/: Cargo.toml
suzy-default-font/src/: default_font.rs  default_font.rs.texture  lib.rs
suzy/examples/: adapter.rs  button.rs  coroutine.rs  cute.data  image.rs  layout.rs  line.rs  text.rs
suzy/src/: adapter.rs  animation.rs  app.rs  dims.rs  graphics.rs  lib.rs  platform.rs  platforms.rs  pointer.rs  selectable.rs  text.rs  units.rs  watch.rs  widget.rs  widgets.rs  window.rs
suzy/src/adapter/: layout.rs  mod.rs  view.rs
suzy/src/animation/: easing.rs  mod.rs
suzy/src/app/: builder.rs  mod.rs  tester.rs  values.rs
suzy/src/graphics/: color.rs  context.rs  mod.rs
suzy/src/math/: color.rs  consts.rs  dims.rs  mod.rs
suzy/src/platform/: event.rs  graphics.rs  mod.rs  shared.rs  stub.rs
suzy/src/platform/opengl/: buffer.rs  drawparams.rs  mask.rs  matrix.rs  mod.rs  primitive.rs  shader.rs  window.rs
suzy/src/platform/opengl/context/: mod.rs
suzy/src/platform/opengl/graphics/: effects.rs  image.rs  masker.rs  mod.rs
suzy/src/platform/opengl/stdshaders/: mod.rs  sdf.frag.glsl  std.frag.glsl  std.vert.glsl
suzy/src/platform/opengl/text/: calc.rs  default_font.rs  font.rs  mod.rs
suzy/src/platform/opengl/texture/: errtex.data  mod.rs  populate.rs
suzy/src/platform/opengl/widgets/: button-all.data  mod.rs
suzy/src/platform/osmesa/: bindings.rs  mod.rs  window.rs
suzy/src/platform/sdl2/: mod.rs  texture_loader.rs  window.rs
suzy/src/platform/tui/: image.rs  window.rs
suzy/src/widget/: anon.rs  content.rs  coroutine.rs  desc.rs  ephemeral.rs  graphic.rs  init.rs  internal.rs  layout.rs  mod.rs  receivers.rs  rect.rs  unique_handle.rs
suzy/src/widgets/: button.rs  label.rs  mod.rs  togglebutton.rs
suzy/tests/: animation.rs  button.rs  mask.rs  smoke.rs  tint.rs  togglebutton.rs  utils.rs
suzy_atlas/: Cargo.toml
suzy_atlas/src/: lib.rs  packer.rs
suzy_build_tools/: Cargo.toml  README.md
suzy_build_tools/examples/: generate_font.rs
suzy_build_tools/src/: fontasset.rs  lib.rs  progressbar.rs  sdf.rs
suzy_build_tools/src/fontasset/: mod.rs  output.rs  render_char.rs  settings.rs
suzy_fontasset_builder/: Cargo.toml
suzy_fontasset_builder/src/: kerning.rs  lib.rs
suzy_sdf/: Cargo.toml
tests/: animation.rs  button.rs  togglebutton.rs
