[package]
name = "suzy"
version = "0.1.0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"

[features]
default = []
tui = ["libc", "gag"]

[dependencies]
drying_paint = "0.1.0"
libc = { version = "0.2.66", optional = true }
gag = { version = "0.1.10", optional = true }

[build-dependencies]
bindgen = "0.52.0"
