[package]
name = "suzy"
version = "0.1.0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"

[features]
default = ["lookup_consts", "sdl"]
lookup_consts = ["lazy_static"]
tui = ["libc", "gag", "widestring"]
opengl = ["gl"]
sdl = ["sdl2", "opengl"]

[dependencies]
drying_paint = "0.1.4"
gag = { version = "0.1.10", optional = true }
gl = { version = "0.14.0", optional = true }
lazy_static = { version = "^1.4.0", optional = true }
libc = { version = "0.2.66", optional = true }
widestring = { version = "0.4.0", optional = true }

[dependencies.sdl2]
version = "0.33"
optional = true
default-features = false
features = ["image"]

[build-dependencies]
bindgen = "0.52.0"
