[package]
name = "suzy"
version = "0.2.0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"
description = "GUI framework based on observer pattern"
homepage = "https://github.com/geeklint/suzy"
repository = "https://github.com/geeklint/suzy"
readme = "README.md"
keywords = ["gui", "kivy", "widgets"]
license = "MPL-2.0"

[features]
default = ["sdl", "platform_osmesa_test", "inline_tweak", "default_font"]
ci_build = ["platform_osmesa", "inline_tweak", "default_font"]

platform_opengl = []
platform_osmesa_test = ["platform_opengl"]
platform_osmesa = ["platform_opengl"]
default_font = ["platform_opengl"]
sdl = ["sdl2", "platform_opengl"]

[dependencies]
drying_paint = "0.4.6"
inline_tweak = { version = "1.0.8", optional = true }

[dependencies.sdl2]
version = "0.33"
optional = true
default-features = false

[[example]]
name = "image"
required-features = ["platform_opengl"]
