[package]
name = "suzy"
version = "0.3.0-dev0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"
description = "GUI framework based on observer pattern"
homepage = "https://github.com/geeklint/suzy"
repository = "https://github.com/geeklint/suzy"
readme = "README.md"
keywords = ["gui", "kivy", "widgets"]
license = "Apache-2.0 OR MIT OR Zlib"

[features]
default = ["platform_sdl", "inline_tweak", "default_font"]
ci_build = ["platform_osmesa", "inline_tweak", "default_font"]

platform_opengl = []
platform_osmesa = ["platform_opengl"]
default_font = ["suzy-default-font"]
platform_sdl = ["sdl2", "platform_opengl"]

[dependencies]
drying_paint = "0.5.2"
inline_tweak = { version = "1.0.8", optional = true }
suzy-default-font = { path = "../suzy-default-font", optional = true }

[dependencies.sdl2]
version = "0.33"
optional = true
default-features = false

[[example]]
name = "adapter"
required-features = ["platform_sdl"]

[[example]]
name = "button"
required-features = ["platform_sdl"]

[[example]]
name = "coroutine"
required-features = ["platform_sdl"]

[[example]]
name = "image"
required-features = ["platform_sdl"]

[[example]]
name = "layout"
required-features = ["platform_sdl"]

[[example]]
name = "text"
required-features = ["platform_sdl"]
