[package]
name = "suzy"
version = "0.3.0-dev0"
edition = "2018"
description = "GUI framework based on observer pattern"
homepage = "https://github.com/geeklint/suzy"
repository = "https://github.com/geeklint/suzy"
readme = "README.md"
keywords = ["gui", "kivy", "widgets"]
license = "Apache-2.0 OR MIT OR Zlib"
categories = ["gui"]

[features]
default = []
quickstart = ["platform-sdl", "inline_tweak", "default-font"]

platform-opengl = []
platform-osmesa = ["platform-opengl"]
default-font = ["suzy-default-font"]
platform-sdl = ["sdl2", "platform-opengl"]

[dependencies]
drying_paint = "0.5.5"
inline_tweak = { version = "1.0.8", optional = true }
suzy-default-font = { path = "../suzy-default-font", optional = true }

[dependencies.sdl2]
version = "0.38.0"
optional = true
default-features = false

[[example]]
name = "adapter"
required-features = ["quickstart"]

[[example]]
name = "button"
required-features = ["quickstart"]

[[example]]
name = "coroutine"
required-features = ["quickstart"]

[[example]]
name = "image"
required-features = ["quickstart"]

[[example]]
name = "layout"
required-features = ["quickstart"]

[[example]]
name = "text"
required-features = ["quickstart"]

[[example]]
name = "line"
required-features = ["quickstart"]
