[package]
name = "suzy_build_tools"
version = "0.0.2-dev0"
authors = ["Violet <violet@geeklint.com>"]
edition = "2018"
description = "Build tools for Suzy"
homepage = "https://github.com/geeklint/suzy"
repository = "https://github.com/geeklint/suzy"
readme = "README.md"
keywords = ["suzy"]
license = "Apache-2.0 OR MIT OR Zlib"

[dependencies]
blurry = "0.1.0"